--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
             </div>
         </figure>
 
-        <article class="body-text">
+        <article class="body-text page-container about-page">
             <div class="container">
                 <p>Welcome, traveler! Whether you found us by chance, prophecy, or a well-placed Google search, we’re glad you’re here.</p>
                 <p>Founded in Year One Post Brew (well, 2025), <strong>The Cosy Crit</strong> has been serving the good people of Greater Manchester with strong coffee, flaky pastries, and even stronger dice rolls ever since. We’re an independent café with a love for hot drinks, fresh bakes, and nerdy things — especially the kind that involve character sheets, chaotic alignments, and shouting "NAT 20!" loud enough to scare the barista.</p>
