--- a/contact/index.html
+++ b/contact/index.html
@@ -42,7 +42,7 @@
             </div>
         </figure>
 
-        <article class="body-text">
+        <article class="body-text page-container contact-page">
             <div class="container">
                 <aside class="details">
                     <ul class="contact-details">
@@ -88,32 +88,38 @@
                             <label class="label" for="firstname">First Name:</label>
                             <input type="text" name="firstname" id="firstname" class="form-field text-field" placeholder="First Name" />
                         </div>
+
                         <div class="field last-name">
                             <label class="label" for="lastname">Last Name:</label>
                             <input type="text" name="lastname" id="lastname" class="form-field text-field" placeholder="Last Name" />
                         </div>
                     </div>
+
                     <div class="row form-row fields-two contact">
                         <div class="field email">
                             <label class="label" for="email">Email:</label>
                             <input type="email" name="email" id="email" class="form-field text-field" placeholder="me@email.com" />
                         </div>
+
                         <div class="field telno">
                             <label class="label" for="telno">Telephone number:</label>
                             <input type="text" name="telno" id="telno" class="form-field text-field intlTelInput" placeholder="+44" />
                         </div>
                     </div>
+
                     <div class="row form-row field-one message">
                         <div class="field msg">
                             <label class="label" for="msg">Message:</label>
                             <textarea name="msg" id="msg" class="form-field textarea-field"></textarea>
                         </div>
                     </div>
+
                     <div class="row form-row field-one captcha">
                         <div class="field captcha-field">
                             <div class="cf-turnstile" data-sitekey="0x4AAAAAABHebg3ThHpZt0cw" data-theme="light" data-size="flexible"></div>
                         </div>
                     </div>
+                    
                     <div class="buttons">
                         <button class="form-field button-field primary-button" name="submitform" id="submitform">
                             <span class="button-label">Submit Form</span>
