--- a/drinks/index.html
+++ b/drinks/index.html
@@ -42,7 +42,7 @@
             </div>
         </figure>
 
-        <article class="body-text">
+        <article class="body-text page-container drinks-page menu-page">
             <div class="container">
                 <section class="menu-list drinks-menu">
                     <ul class="menu">
@@ -52,7 +52,10 @@
                             </figure>
 
                             <div class="data">
-                                <h3 class="item-name">Cold Brew of Wakefulness</h3>
+                                <div class="item-head">
+                                    <h3 class="item-name">Cold Brew of Wakefulness</h3>
+                                    <p class="price">&pound;3.20</p>
+                                </div>
                                 <p class="product-name">Cold Brew Coffee</p>
                                 <ul class="suitable-for">
                                     <li class="vegan">VE</li>
@@ -60,8 +63,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">Brewed for 16 hours and poured over ice, this potion delivers smooth, bold coffee magic with none of the bitterness. Best consumed before adventuring.</p>
-                                <p class="price">&pound;3.20</p>
-                                <p class="price-notes">Add £0.50 for syrup</p>
+                                <p class="price-notes">Add 50p for syrup</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="none">None</span>
@@ -75,7 +77,10 @@
                             </figure>
 
                             <div class="data">
-                                <h3 class="item-name">Espresso Shot (Short Rest)</h3>
+                                <div class="item-head">
+                                    <h3 class="item-name">Espresso Shot (Short Rest)</h3>
+                                    <p class="price">&pound;2.00</p>
+                                </div>
                                 <p class="product-name">Espresso</p>
                                 <ul class="suitable-for">
                                     <li class="vegan">VE</li>
@@ -83,7 +88,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">A quick pick-me-up straight from the espresso altar. Sharp, smooth, and never over-extracted — for when you need to pass a constitution save against fatigue.</p>
-                                <p class="price">&pound;2.00 (£2.30 double)</p>
+                                <p class="price-notes">Add 30p to make it a double</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="none">None</span>
@@ -93,11 +98,14 @@
 
                         <li class="item">
                             <figure class="image">
-                                <img src="/images/project/thumbs/iced_coffee.png" alt="" />
+                                <img src="/images/project/thumbs/iced_coffee.png" alt="Iced Brew Cantrip. Chill, sweet, and refreshingly powerful. Ideal for hot campaign days." />
                             </figure>
 
                             <div class="data">
-                                <h3 class="item-name">Iced Brew Cantrip</h3>
+                                <div class="item-head">
+                                    <h3 class="item-name">Iced Brew Cantrip</h3>
+                                    <p class="price">&pound;3.00</p>
+                                </div>
                                 <p class="product-name">Iced Coffee</p>
                                 <ul class="suitable-for">
                                     <li class="vegan">VE</li>
@@ -105,8 +113,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">Our classic house coffee poured over ice, lightly sweetened or made to your liking. Syrups available for a bit of flavour flair.</p>
-                                <p class="price">&pound;3.00</p>
-                                <p class="price-notes">Add £0.50 for syrup</p>
+                                <p class="price-notes">Add 50p for syrup</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="none">None (check for syrup)</span>
@@ -120,7 +127,10 @@
                             </figure>
 
                             <div class="data">
-                                <h3 class="item-name">Latte of Tranquility</h3>
+                                <div class="item-head">
+                                    <h3 class="item-name">Latte of Tranquility</h3>
+                                    <p class="price">&pound;3.30</p>
+                                </div>
                                 <p class="product-name">Espresso with Steamed Milk</p>
                                 <ul class="suitable-for">
                                     <li class="vegan">VE</li>
@@ -128,8 +138,7 @@
                                     <li class="gluten-free">GF</li>
                                 </ul>
                                 <p class="description">Smooth espresso with steamed milk, topped with gentle foam — the café classic to soothe any battle-worn bard. Customisable with flavour syrups.</p>
-                                <p class="price">&pound;3.30</p>
-                                <p class="price-notes">Add £0.50 for syrup</p>
+                                <p class="price-notes">Add 50p for syrup</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class=""><strong>Milk</strong> (non-dairy options available)</span>
@@ -143,23 +152,17 @@
                             </figure>
 
                             <div class="data">
-                                <h3 class="item-name">Flavoured Matcha Elixirs</h3>
+                                <div class="item-head">
+                                    <h3 class="item-name">Flavoured Matcha Elixirs</h3>
+                                    <p class="price">&pound;3.80</p>
+                                </div>
                                 <p class="product-name">Flavoured Matcha Lattes</p>
                                 <ul class="suitable-for">
                                     <li class="vegan">VE</li>
                                     <li class="vegetarian">VG</li>
                                     <li class="gluten-free">GF</li>
                                 </ul>
-                                <p class="description">Premium ceremonial-grade matcha whisked into milk or alt-milk. Choose from our spellbook of flavours:</p>
-                                <ul class="options flavourings">
-                                    <li>Classic (no flavouring)</li>
-                                    <li>Vanilla Grove</li>
-                                    <li>Enchanted Honey</li>
-                                    <li>Mint Mist</li>
-                                    <li>Lavender Bloom</li>
-                                    <li>Dragonfruit (seasonal)</li>
-                                </ul>
-                                <p class="price">&pound;3.80</p>
+                                <p class="description">Premium ceremonial-grade matcha whisked into milk or alt-milk. Choose from our spellbook of flavours: Classic (no flavouring), Vanilla Grove, Enchanted Honey, Mint Mist, Lavender Bloom, and Dragonfruit (seasonal).</p>
                                 <p class="allergens">
                                     <span class="label">Allergens:</span>
                                     <span class="milk"><strong>Milk</strong> (non-dairy options available)</span>,
