--- a/pastries/index.html
+++ b/pastries/index.html
@@ -41,6 +41,137 @@
                 <h1 class="title">Pastries Menu</h1>
             </div>
         </figure>
+
+        <article class="body-text page-container pastries-page menu-page">
+            <div class="container">
+                <section class="menu-list pastries-menu">
+                    <ul class="menu">
+                        <li class="item">
+                            <figure class="image">
+                                <img src="/images/project/thumbs/bread.png" alt="Loaf of Holding. Hearty, crusty, and the perfect critical success for butter delivery." />
+                            </figure>
+
+                            <div class="data">
+                                <div class="item-head">
+                                    <h3 class="item-name">Loaf of Holding</h3>
+                                    <p class="price">&pound;3.00</p>
+                                </div>
+                                <p class="product-name">Fresh Bread</p>
+                                <ul class="suitable-for">
+                                    <li class="vegetarian">VG</li>
+                                </ul>
+                                <p class="description">Our signature soda-style bread, baked fresh in-house every morning. Dense, rustic, and hearty — the perfect companion to soups, stews, or a slab of butter and a strong brew.</p>
+                                <p class="allergens">
+                                    <span class="label">Allergens:</span>
+                                    <span class="wheat"><strong>Wheat</strong></span>,
+                                    <span class="">May contain traces of <strong>nuts</strong>, <strong>milk</strong></span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="item">
+                            <figure class="image">
+                                <img src="/images/project/thumbs/cinnamon_roll.png" alt="Cinna-scroll. Swirled with cinnamon and topped with vanilla glaze. A chaotic good snack." />
+                            </figure>
+
+                            <div class="data">
+                                <div class="item-head">
+                                    <h3 class="item-name">Cinna-scroll</h3>
+                                    <p class="price">&pound;2.80</p>
+                                </div>
+                                <p class="product-name">Cinnamon Roll</p>
+                                <ul class="suitable-for">
+                                    <li class="vegetarian">VG</li>
+                                </ul>
+                                <p class="description">A soft, spiralled cinnamon roll made with real butter and brown sugar, then glazed with a vanilla icing. As dangerously addictive as a cursed artifact.</p>
+                                <p class="allergens">
+                                    <span class="label">Allergens:</span>
+                                    <span class="wheat"><strong>Wheat</strong></span>,
+                                    <span class="milk"><strong>Milk</strong></span>,
+                                    <span class="egg"><strong>Egg</strong></span>,
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="item">
+                            <figure class="image">
+                                <img src="/images/project/thumbs/cookies.png" alt="Crit Cookies. Flavours include Chocolate Chip, Double Chocolate, and Rainbow Sprinkle." />
+                            </figure>
+
+                            <div class="data">
+                                <div class="item-head">
+                                    <h3 class="item-name">Crit Cookies</h3>
+                                    <p class="price">&pound;2.00</p>
+                                </div>
+                                <p class="product-name">Chunky Cookies</p>
+                                <ul class="suitable-for">
+                                    <li class="vegetarian">VG</li>
+                                </ul>
+                                <p class="description">Our chunky cookies come in several varieties, baked daily with adventurer-sized portions of sweetness. Available flavours: Chocolate Chip, Double Chocolate, Rainbow Sprinkle (with white chocolate chips)</p>
+                                <p class="price-notes">Buy three for £5.00</p>
+                                <p class="allergens">
+                                    <span class="label">Allergens:</span>
+                                    <span class="wheat"><strong>Wheat</strong></span>,
+                                    <span class="milk"><strong>Milk</strong></span>,
+                                    <span class="egg"><strong>Egg</strong></span>,
+                                    <span class="soya"><strong>Soya</strong></span>
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="item">
+                            <figure class="image">
+                                <img src="/images/project/thumbs/croissant.png" alt="Butterbrew Croissants. Flakey golden pastry, filled with real butter or rich almond magic.">
+                            </figure>
+
+                            <div class="data">
+                                <div class="item-head">
+                                    <h3 class="item-name">Butterbrew Croissants</h3>
+                                    <p class="price">&pound;2.50</p>
+                                </div>
+                                <p class="product-name">Classic or Almond</p>
+                                <ul class="suitable-for">
+                                    <li class="vegetarian">VG</li>
+                                </ul>
+                                <p class="description">Classic, flaky croissants, made with all-butter dough for that perfect golden crunch. Also available in Almond (filled and topped with almond cream and flakes).</p>
+                                <p class="allergens">
+                                    <span class="label">Allergens:</span>
+                                    <span class="wheat"><strong>Wheat</strong></span>,
+                                    <span class="milk"><strong>Milk</strong></span>,
+                                    <span class="egg"><strong>Egg</strong></span>,
+                                    <span class="almond"><strong>Almond</strong></span>,
+                                </p>
+                            </div>
+                        </li>
+
+                        <li class="item">
+                            <figure class="image">
+                                <img src="/images/project/thumbs/pain_au_chocolat.png" alt="Pain au Chocolat (Mimic Edition). Disguised as a croissant. Surprise! It’s better.">
+                            </figure>
+
+                            <div class="data">
+                                <div class="item-head">
+                                    <h3 class="item-name">Pain au Chocolat (Mimic Edition)</h3>
+                                    <p class="price">&pound;2.80</p>
+                                </div>
+                                <p class="product-name">Chocolate-Filled Pastry</p>
+                                <ul class="suitable-for">
+                                    <li class="vegetarian">VG</li>
+                                </ul>
+                                <p class="description">Looks like a croissant. Isn’t. Instead, it’s packed with rich dark chocolate and perfectly layered pastry. Not dangerous, but definitely disappears quickly.</p>
+                                <p class="allergens">
+                                    <span class="label">Allergens:</span>
+                                    <span class="wheat"><strong>Wheat</strong></span>,
+                                    <span class="milk"><strong>Milk</strong></span>,
+                                    <span class="egg"><strong>Egg</strong></span>,
+                                    <span class="soy"><strong>Soya</strong></span>
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </article>
     </main>
 
     <footer id="site-footer">
