--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <article class="menus">
                 <figure class="menu drinks">
                     <figure class="image">
-                        <img src="/images/drinks-menu.png" alt="" />
+                        <img src="/images/drinks-menu.png" alt="Fuel your next quest with our luxury coffees and lattes" />
                     </figure>
                     <div class="content">
                         <h2 class="menu-title">Fuel Your Next Quest</h2>
@@ -83,7 +83,7 @@
 
                 <figure class="menu pastries">
                     <figure class="image">
-                        <img src="/images/bakery-menu.png" alt="">
+                        <img src="/images/bakery-menu.png" alt="Boost your sweetness proficiency with our freshly baked pastries">
                     </figure>
                     <div class="content">
                         <h2 class="menu-title">Roll for Sweetness</h2>
@@ -105,7 +105,17 @@
                 </div>
             </article> <!-- .gaming.cta -->
 
-            <article class="map"></article>
+            <article class="map">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2371.199409194781!2d-2.2426316840786536!3d53.48075907999861!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1d6ecbff3d7%3A0x7b5f16bbef9f472b!2sManchester%20City%20Centre!5e0!3m2!1sen!2suk!4v1712739465555!5m2!1sen!2suk" 
+                    width="600" 
+                    height="450" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </article>
 
             <article class="contact">
                 <aside class="details">
